--- a/aremac/aremac/aremac.csproj
+++ b/aremac/aremac/aremac.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="account.aspx" />
     <Content Include="canon1.jpg" />
     <Content Include="canon2.jpg" />
     <Content Include="canon3.jpg" />
@@ -74,6 +75,7 @@
     <Content Include="fujifilm1.jpg" />
     <Content Include="fujifilm2.jpg" />
     <Content Include="fujifilm3.jpg" />
+    <Content Include="login.aspx" />
     <Content Include="nikon1.jpg" />
     <Content Include="nikon2.jpg" />
     <Content Include="nikon3.jpg" />
@@ -88,10 +90,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="payment.aspx" />
+    <Content Include="products.aspx" />
     <Content Include="stylesheet.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="account.aspx.cs">
+      <DependentUpon>account.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="account.aspx.designer.cs">
+      <DependentUpon>account.aspx</DependentUpon>
+    </Compile>
     <Compile Include="aremac.Master.cs">
       <DependentUpon>aremac.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -115,6 +126,27 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="login.aspx.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="login.aspx.designer.cs">
+      <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="payment.aspx.cs">
+      <DependentUpon>payment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="payment.aspx.designer.cs">
+      <DependentUpon>payment.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="products.aspx.cs">
+      <DependentUpon>products.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="products.aspx.designer.cs">
+      <DependentUpon>products.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
