--- a/aremac/aremac/aremac.csproj
+++ b/aremac/aremac/aremac.csproj
@@ -93,8 +93,11 @@
     <Content Include="Global.asax" />
     <Content Include="payment.aspx" />
     <Content Include="products.aspx" />
+    <Content Include="register.aspx" />
     <Content Include="stylesheet.css" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="account.aspx.cs">
@@ -150,6 +153,13 @@
       <DependentUpon>products.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="register.aspx.cs">
+      <DependentUpon>register.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="register.aspx.designer.cs">
+      <DependentUpon>register.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
